# visual_regression_testing_tool

./: .gitignore  .replit  Dockerfile  Dockerfile.robust  FILE-STRUCTURE.md  LOCAL-SETUP.md  PRODUCTION-DEPLOYMENT.md  README-DEPLOYMENT.md  README.md  app.py  browser_automation.py  browser_manager.py  config.py  deploy-local.bat  deploy-local.sh  deploy-robust.sh  deploy.sh  docker-compose.yml  env.example  image_comparator.py  image_comparison.py  install.sh  nginx.conf  packages.txt  pyproject.toml  replit.md  requirements-ci.txt  requirements.txt  result_manager.py  results_store.py  run_tests.bat  run_tests.sh  test_functionality.py  utils.py
.github/workflows/: visual-regression.yml
.streamlit/: config.toml
ci/: config.example.json  run_tests.py  runner.py
reports/: generator.py
systemd/: visual-regression-testing.service
test_results/test_20250903_162114/: Test1_Chrome_Desktop_2025-09-03T162158643118.json
test_results/test_20250903_162529/: Test1_Chrome_Desktop_2025-09-03T162608563238.json
test_results/test_20250903_163450/: Test1_Chrome_Desktop_2025-09-03T163529755583.json
test_results/test_20250903_165147/: Test1_Chrome_Desktop_2025-09-03T165225690041.json
ui/: __init__.py  about_tab.py  auth.py  browsers.py  comparison_tab.py  comparison_view.py  config_tab.py  deps.py  export.py  helpers.py  history_page.py  manage_tab.py  new_test_page.py  results_page.py  results_tab.py  session.py  test_runner.py  theme.py
