[project]
name = "visual-regression-testing-tool"
version = "0.1.0"
description = "Visual Regression Testing Tool for web applications"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0.0",
    "pandas>=2.2.0",
    "pillow>=10.4.0",
    "playwright>=1.45.0",
    "scikit-image>=0.23.0",
    "streamlit>=1.39.0",
    "reportlab>=4.2.0",
]
